# kremis

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  clippy.toml  docker-entrypoint.sh  greptile.json  kremis.example.toml  kremis.toml
.claude/: settings.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  benchmark.yml  ci.yml  release.yml
apps/kremis/: Cargo.toml
apps/kremis-mcp/: Cargo.toml
apps/kremis-mcp/src/: client.rs  config.rs  main.rs  server.rs
apps/kremis/src/: config.rs  lib.rs  main.rs
apps/kremis/src/api/: auth.rs  handlers.rs  middleware.rs  mod.rs  types.rs
apps/kremis/src/cli/: commands.rs  mod.rs
apps/kremis/tests/: api_tests.rs  cli_tests.rs  types_tests.rs
benchmark/: README.md  run.py  world.py  world_lh.py
crates/kremis-core/: Cargo.toml
crates/kremis-core/benches/: graph_bench.rs
crates/kremis-core/src/: certificate.rs  compositor.rs  confidence.rs  export.rs  graph.rs  grounding.rs  ingestor.rs  lib.rs  mutation.rs  primitives.rs  query.rs  session.rs
crates/kremis-core/src/formats/: persistence.rs
crates/kremis-core/src/storage/: redb_graph.rs
crates/kremis-core/src/system/: mod.rs  stage.rs
crates/kremis-core/src/types/: mod.rs
crates/kremis-core/tests/: certificate_vectors.rs  property_tests.rs  validation_tiers.rs
docs/: API.md  ARCHITECTURE.md  CLI.md  architecture.mdx  configuration.mdx  docs.json  installation.mdx  introduction.mdx  openapi.yml  philosophy.mdx  quickstart.mdx  the-name.mdx
docs/api/: certify.mdx  export.mdx  hash.mdx  health.mdx  metrics.mdx  overview.mdx  query-intersect.mdx  query-lookup.mdx  query-path.mdx  query-properties.mdx  query-related.mdx  query-traverse.mdx  signal-batch.mdx  signal-retract.mdx  signal.mdx  stage.mdx  status.mdx
docs/cli/: export-import.mdx  hash.mdx  ingest.mdx  init.mdx  overview.mdx  query.mdx  server.mdx  status.mdx
docs/concepts/: certificate-spec.mdx  graph-engine.mdx  proof-carrying-knowledge.mdx  signals.mdx  stages.mdx
docs/mcp/: overview.mdx  setup.mdx  tools.mdx  why-kremis.mdx
