# =============================================================================
# APPS/KREMIS-MCP - MCP Server Bridge
# =============================================================================
#
# External process that translates MCP (Model Context Protocol) into
# HTTP calls to the Kremis REST API. Pure protocol translator.
#
# Claude/GPT <--MCP (stdio)--> kremis-mcp <--HTTP--> kremis server
#
# Does NOT embed kremis-core. Communicates exclusively via HTTP.
# =============================================================================

[package]
name = "kremis-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kremis MCP Server - Model Context Protocol bridge to Kremis API"

[[bin]]
name = "kremis-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-io", "schemars"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
